--- a/LTWWW_JAVA_28082025_TUAN02_TOPHANGIABAO/src/main/webapp/login.html
+++ b/LTWWW_JAVA_28082025_TUAN02_TOPHANGIABAO/src/main/webapp/login.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="style/main.css">
 </head>
 <body>
-    <h1>Welcome to Login page</h1><br>
+    <h1 style="color: aqua; font-weight: bold">Hi! Welcome to our website!</h1><br>
+    <h2>Please log in to continue</h2>
     <form action="hello-servlet" method="POST">
-        <table>
+        <table class="tableStyle">
             <tr>
                 <td>
                     <div>Username:</div>
@@ -31,6 +33,12 @@
             </tr>
         </table>
     </form>
+
+    <p>
+        For testing:<br>
+        Username: TestingAcc1234<br>
+        Password: test1234
+    </p>
 
 </body>
 </html>
